homparser/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> joinspec sequentialspec
Rule 2     joinspec -> JOIN LPAREN arglist SEPARE arglist RPAREN RETURNS LPAREN identlist RPAREN LOCALS LPAREN arglist RPAREN block
Rule 3     joinspec -> JOIN error RPAREN block
Rule 4     joinspec -> JOIN LPAREN arglist SEPARE arglist RPAREN RETURNS LPAREN identlist RPAREN LOCALS LPAREN arglist RPAREN error
Rule 5     sequentialspec -> SEQUENTIAL LPAREN arglist RPAREN RETURNS LPAREN identlist RPAREN LOCALS LPAREN arglist RPAREN block
Rule 6     arglist -> arglist COMMA arg
Rule 7     arglist -> arg
Rule 8     arglist -> <empty>
Rule 9     arg -> type IDENT
Rule 10    identlist -> IDENT
Rule 11    identlist -> IDENT COMMA identlist
Rule 12    identlist -> <empty>
Rule 13    constant -> NUMBER
Rule 14    constant -> TRUE
Rule 15    constant -> FALSE
Rule 16    postfixExpression -> constant
Rule 17    postfixExpression -> IDENT
Rule 18    postfixExpression -> LPAREN expression RPAREN
Rule 19    postfixExpression -> postfixExpression LBRACKET expression RBRACKET
Rule 20    postfixExpression -> IDENT LPAREN expressionlist RPAREN
Rule 21    unaryExpression -> unop unaryExpression
Rule 22    unaryExpression -> postfixExpression
Rule 23    unop -> PLUS
Rule 24    unop -> MINUS
Rule 25    unop -> EXCLAMATION
Rule 26    unop -> TILDE
Rule 27    multiplicativeExpression -> unaryExpression
Rule 28    multiplicativeExpression -> multiplicativeExpression multop unaryExpression
Rule 29    multop -> TIMES
Rule 30    multop -> DIV
Rule 31    additiveExpression -> unaryExpression
Rule 32    additiveExpression -> additiveExpression addop multiplicativeExpression
Rule 33    addop -> PLUS
Rule 34    addop -> MINUS
Rule 35    relationalExpression -> additiveExpression
Rule 36    relationalExpression -> relationalExpression compop additiveExpression
Rule 37    compop -> LT
Rule 38    compop -> LEQ
Rule 39    compop -> GT
Rule 40    compop -> GEQ
Rule 41    equalityExpression -> relationalExpression
Rule 42    equalityExpression -> equalityExpression eqop relationalExpression
Rule 43    eqop -> EQEQ
Rule 44    eqop -> NEQ
Rule 45    andExpression -> equalityExpression
Rule 46    andExpression -> andExpression AND equalityExpression
Rule 47    orExpression -> andExpression
Rule 48    orExpression -> orExpression OR andExpression
Rule 49    conditionalExpression -> orExpression
Rule 50    conditionalExpression -> orExpression QUESTION expression COLON expression
Rule 51    expression -> conditionalExpression
Rule 52    expressionlist -> expression
Rule 53    expressionlist -> expressionlist COMMA expression
Rule 54    expressionlist -> <empty>
Rule 55    statementlist -> statementlist statement
Rule 56    statementlist -> <empty>
Rule 57    assignmentStatement -> postfixExpression EQ expression
Rule 58    assignmentStatement -> postfixExpression EQ error
Rule 59    assignmentStatement -> error EQ expression
Rule 60    statement -> assignmentStatement SEMICOLON
Rule 61    statement -> iterationStatement
Rule 62    statement -> selectionStatement
Rule 63    statement -> block
Rule 64    statement -> error SEMICOLON
Rule 65    selectionStatement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 66    selectionStatement -> IF LPAREN expression RPAREN statement
Rule 67    iterationStatement -> FOR LPAREN assignmentStatement SEMICOLON expression SEMICOLON assignmentStatement RPAREN statement
Rule 68    block -> LBRACE statementlist RBRACE
Rule 69    block -> LBRACE error RBRACE
Rule 70    type -> INT
Rule 71    type -> FLOAT
Rule 72    type -> BOOL
Rule 73    type -> type TIMES

Terminals, with rules where they appear

AND                  : 46
BOOL                 : 72
COLON                : 50
COMMA                : 6 11 53
DIV                  : 30
ELSE                 : 65
EQ                   : 57 58 59
EQEQ                 : 43
EXCLAMATION          : 25
FALSE                : 15
FLOAT                : 71
FOR                  : 67
GEQ                  : 40
GT                   : 39
IDENT                : 9 10 11 17 20
IF                   : 65 66
INT                  : 70
JOIN                 : 2 3 4
LBRACE               : 68 69
LBRACKET             : 19
LEQ                  : 38
LOCALS               : 2 4 5
LPAREN               : 2 2 2 4 4 4 5 5 5 18 20 65 66 67
LT                   : 37
MINUS                : 24 34
NEQ                  : 44
NUMBER               : 13
OR                   : 48
PLUS                 : 23 33
QUESTION             : 50
RBRACE               : 68 69
RBRACKET             : 19
RETURNS              : 2 4 5
RPAREN               : 2 2 2 3 4 4 4 5 5 5 18 20 65 66 67
SEMICOLON            : 60 64 67 67
SEPARE               : 2 4
SEQUENTIAL           : 5
TILDE                : 26
TIMES                : 29 73
TRUE                 : 14
error                : 3 4 58 59 64 69

Nonterminals, with rules where they appear

additiveExpression   : 32 35 36
addop                : 32
andExpression        : 46 47 48
arg                  : 6 7
arglist              : 2 2 2 4 4 4 5 5 6
assignmentStatement  : 60 67 67
block                : 2 3 5 63
compop               : 36
conditionalExpression : 51
constant             : 16
eqop                 : 42
equalityExpression   : 42 45 46
expression           : 18 19 50 50 52 53 57 59 65 66 67
expressionlist       : 20 53
identlist            : 2 4 5 11
iterationStatement   : 61
joinspec             : 1
multiplicativeExpression : 28 32
multop               : 28
orExpression         : 48 49 50
postfixExpression    : 19 22 57 58
program              : 0
relationalExpression : 36 41 42
selectionStatement   : 62
sequentialspec       : 1
statement            : 55 65 65 66 67
statementlist        : 55 68
type                 : 9 73
unaryExpression      : 21 27 28 31
unop                 : 21

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . joinspec sequentialspec
    (2) joinspec -> . JOIN LPAREN arglist SEPARE arglist RPAREN RETURNS LPAREN identlist RPAREN LOCALS LPAREN arglist RPAREN block
    (3) joinspec -> . JOIN error RPAREN block
    (4) joinspec -> . JOIN LPAREN arglist SEPARE arglist RPAREN RETURNS LPAREN identlist RPAREN LOCALS LPAREN arglist RPAREN error

    JOIN            shift and go to state 1

    joinspec                       shift and go to state 2
    program                        shift and go to state 3

state 1

    (2) joinspec -> JOIN . LPAREN arglist SEPARE arglist RPAREN RETURNS LPAREN identlist RPAREN LOCALS LPAREN arglist RPAREN block
    (3) joinspec -> JOIN . error RPAREN block
    (4) joinspec -> JOIN . LPAREN arglist SEPARE arglist RPAREN RETURNS LPAREN identlist RPAREN LOCALS LPAREN arglist RPAREN error

    LPAREN          shift and go to state 4
    error           shift and go to state 5


state 2

    (1) program -> joinspec . sequentialspec
    (5) sequentialspec -> . SEQUENTIAL LPAREN arglist RPAREN RETURNS LPAREN identlist RPAREN LOCALS LPAREN arglist RPAREN block

    SEQUENTIAL      shift and go to state 7

    sequentialspec                 shift and go to state 6

state 3

    (0) S' -> program .



state 4

    (2) joinspec -> JOIN LPAREN . arglist SEPARE arglist RPAREN RETURNS LPAREN identlist RPAREN LOCALS LPAREN arglist RPAREN block
    (4) joinspec -> JOIN LPAREN . arglist SEPARE arglist RPAREN RETURNS LPAREN identlist RPAREN LOCALS LPAREN arglist RPAREN error
    (6) arglist -> . arglist COMMA arg
    (7) arglist -> . arg
    (8) arglist -> .
    (9) arg -> . type IDENT
    (70) type -> . INT
    (71) type -> . FLOAT
    (72) type -> . BOOL
    (73) type -> . type TIMES

    SEPARE          reduce using rule 8 (arglist -> .)
    COMMA           reduce using rule 8 (arglist -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 11
    BOOL            shift and go to state 13

    arglist                        shift and go to state 12
    type                           shift and go to state 9
    arg                            shift and go to state 10

state 5

    (3) joinspec -> JOIN error . RPAREN block

    RPAREN          shift and go to state 14


state 6

    (1) program -> joinspec sequentialspec .

    $end            reduce using rule 1 (program -> joinspec sequentialspec .)


state 7

    (5) sequentialspec -> SEQUENTIAL . LPAREN arglist RPAREN RETURNS LPAREN identlist RPAREN LOCALS LPAREN arglist RPAREN block

    LPAREN          shift and go to state 15


state 8

    (70) type -> INT .

    IDENT           reduce using rule 70 (type -> INT .)
    TIMES           reduce using rule 70 (type -> INT .)


state 9

    (9) arg -> type . IDENT
    (73) type -> type . TIMES

    IDENT           shift and go to state 16
    TIMES           shift and go to state 17


state 10

    (7) arglist -> arg .

    RPAREN          reduce using rule 7 (arglist -> arg .)
    COMMA           reduce using rule 7 (arglist -> arg .)
    SEPARE          reduce using rule 7 (arglist -> arg .)


state 11

    (71) type -> FLOAT .

    IDENT           reduce using rule 71 (type -> FLOAT .)
    TIMES           reduce using rule 71 (type -> FLOAT .)


state 12

    (2) joinspec -> JOIN LPAREN arglist . SEPARE arglist RPAREN RETURNS LPAREN identlist RPAREN LOCALS LPAREN arglist RPAREN block
    (4) joinspec -> JOIN LPAREN arglist . SEPARE arglist RPAREN RETURNS LPAREN identlist RPAREN LOCALS LPAREN arglist RPAREN error
    (6) arglist -> arglist . COMMA arg

    SEPARE          shift and go to state 19
    COMMA           shift and go to state 18


state 13

    (72) type -> BOOL .

    IDENT           reduce using rule 72 (type -> BOOL .)
    TIMES           reduce using rule 72 (type -> BOOL .)


state 14

    (3) joinspec -> JOIN error RPAREN . block
    (68) block -> . LBRACE statementlist RBRACE
    (69) block -> . LBRACE error RBRACE

    LBRACE          shift and go to state 20

    block                          shift and go to state 21

state 15

    (5) sequentialspec -> SEQUENTIAL LPAREN . arglist RPAREN RETURNS LPAREN identlist RPAREN LOCALS LPAREN arglist RPAREN block
    (6) arglist -> . arglist COMMA arg
    (7) arglist -> . arg
    (8) arglist -> .
    (9) arg -> . type IDENT
    (70) type -> . INT
    (71) type -> . FLOAT
    (72) type -> . BOOL
    (73) type -> . type TIMES

    RPAREN          reduce using rule 8 (arglist -> .)
    COMMA           reduce using rule 8 (arglist -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 11
    BOOL            shift and go to state 13

    arglist                        shift and go to state 22
    type                           shift and go to state 9
    arg                            shift and go to state 10

state 16

    (9) arg -> type IDENT .

    RPAREN          reduce using rule 9 (arg -> type IDENT .)
    COMMA           reduce using rule 9 (arg -> type IDENT .)
    SEPARE          reduce using rule 9 (arg -> type IDENT .)


state 17

    (73) type -> type TIMES .

    IDENT           reduce using rule 73 (type -> type TIMES .)
    TIMES           reduce using rule 73 (type -> type TIMES .)


state 18

    (6) arglist -> arglist COMMA . arg
    (9) arg -> . type IDENT
    (70) type -> . INT
    (71) type -> . FLOAT
    (72) type -> . BOOL
    (73) type -> . type TIMES

    INT             shift and go to state 8
    FLOAT           shift and go to state 11
    BOOL            shift and go to state 13

    type                           shift and go to state 9
    arg                            shift and go to state 23

state 19

    (2) joinspec -> JOIN LPAREN arglist SEPARE . arglist RPAREN RETURNS LPAREN identlist RPAREN LOCALS LPAREN arglist RPAREN block
    (4) joinspec -> JOIN LPAREN arglist SEPARE . arglist RPAREN RETURNS LPAREN identlist RPAREN LOCALS LPAREN arglist RPAREN error
    (6) arglist -> . arglist COMMA arg
    (7) arglist -> . arg
    (8) arglist -> .
    (9) arg -> . type IDENT
    (70) type -> . INT
    (71) type -> . FLOAT
    (72) type -> . BOOL
    (73) type -> . type TIMES

    RPAREN          reduce using rule 8 (arglist -> .)
    COMMA           reduce using rule 8 (arglist -> .)
    INT             shift and go to state 8
    FLOAT           shift and go to state 11
    BOOL            shift and go to state 13

    arglist                        shift and go to state 24
    type                           shift and go to state 9
    arg                            shift and go to state 10

state 20

    (68) block -> LBRACE . statementlist RBRACE
    (69) block -> LBRACE . error RBRACE
    (55) statementlist -> . statementlist statement
    (56) statementlist -> .

  ! shift/reduce conflict for error resolved as shift
    error           shift and go to state 26
    RBRACE          reduce using rule 56 (statementlist -> .)
    FOR             reduce using rule 56 (statementlist -> .)
    IF              reduce using rule 56 (statementlist -> .)
    LBRACE          reduce using rule 56 (statementlist -> .)
    IDENT           reduce using rule 56 (statementlist -> .)
    LPAREN          reduce using rule 56 (statementlist -> .)
    NUMBER          reduce using rule 56 (statementlist -> .)
    TRUE            reduce using rule 56 (statementlist -> .)
    FALSE           reduce using rule 56 (statementlist -> .)

  ! error           [ reduce using rule 56 (statementlist -> .) ]

    statementlist                  shift and go to state 25

state 21

    (3) joinspec -> JOIN error RPAREN block .

    SEQUENTIAL      reduce using rule 3 (joinspec -> JOIN error RPAREN block .)


state 22

    (5) sequentialspec -> SEQUENTIAL LPAREN arglist . RPAREN RETURNS LPAREN identlist RPAREN LOCALS LPAREN arglist RPAREN block
    (6) arglist -> arglist . COMMA arg

    RPAREN          shift and go to state 27
    COMMA           shift and go to state 18


state 23

    (6) arglist -> arglist COMMA arg .

    RPAREN          reduce using rule 6 (arglist -> arglist COMMA arg .)
    COMMA           reduce using rule 6 (arglist -> arglist COMMA arg .)
    SEPARE          reduce using rule 6 (arglist -> arglist COMMA arg .)


state 24

    (2) joinspec -> JOIN LPAREN arglist SEPARE arglist . RPAREN RETURNS LPAREN identlist RPAREN LOCALS LPAREN arglist RPAREN block
    (4) joinspec -> JOIN LPAREN arglist SEPARE arglist . RPAREN RETURNS LPAREN identlist RPAREN LOCALS LPAREN arglist RPAREN error
    (6) arglist -> arglist . COMMA arg

    RPAREN          shift and go to state 28
    COMMA           shift and go to state 18


state 25

    (68) block -> LBRACE statementlist . RBRACE
    (55) statementlist -> statementlist . statement
    (60) statement -> . assignmentStatement SEMICOLON
    (61) statement -> . iterationStatement
    (62) statement -> . selectionStatement
    (63) statement -> . block
    (64) statement -> . error SEMICOLON
    (57) assignmentStatement -> . postfixExpression EQ expression
    (58) assignmentStatement -> . postfixExpression EQ error
    (59) assignmentStatement -> . error EQ expression
    (67) iterationStatement -> . FOR LPAREN assignmentStatement SEMICOLON expression SEMICOLON assignmentStatement RPAREN statement
    (65) selectionStatement -> . IF LPAREN expression RPAREN statement ELSE statement
    (66) selectionStatement -> . IF LPAREN expression RPAREN statement
    (68) block -> . LBRACE statementlist RBRACE
    (69) block -> . LBRACE error RBRACE
    (16) postfixExpression -> . constant
    (17) postfixExpression -> . IDENT
    (18) postfixExpression -> . LPAREN expression RPAREN
    (19) postfixExpression -> . postfixExpression LBRACKET expression RBRACKET
    (20) postfixExpression -> . IDENT LPAREN expressionlist RPAREN
    (13) constant -> . NUMBER
    (14) constant -> . TRUE
    (15) constant -> . FALSE

    RBRACE          shift and go to state 36
    error           shift and go to state 43
    FOR             shift and go to state 37
    IF              shift and go to state 40
    LBRACE          shift and go to state 20
    IDENT           shift and go to state 35
    LPAREN          shift and go to state 38
    NUMBER          shift and go to state 30
    TRUE            shift and go to state 31
    FALSE           shift and go to state 42

    postfixExpression              shift and go to state 41
    constant                       shift and go to state 29
    block                          shift and go to state 44
    statement                      shift and go to state 33
    assignmentStatement            shift and go to state 34
    iterationStatement             shift and go to state 39
    selectionStatement             shift and go to state 32

state 26

    (69) block -> LBRACE error . RBRACE

    RBRACE          shift and go to state 45


state 27

    (5) sequentialspec -> SEQUENTIAL LPAREN arglist RPAREN . RETURNS LPAREN identlist RPAREN LOCALS LPAREN arglist RPAREN block

    RETURNS         shift and go to state 46


state 28

    (2) joinspec -> JOIN LPAREN arglist SEPARE arglist RPAREN . RETURNS LPAREN identlist RPAREN LOCALS LPAREN arglist RPAREN block
    (4) joinspec -> JOIN LPAREN arglist SEPARE arglist RPAREN . RETURNS LPAREN identlist RPAREN LOCALS LPAREN arglist RPAREN error

    RETURNS         shift and go to state 47


state 29

    (16) postfixExpression -> constant .

    EQ              reduce using rule 16 (postfixExpression -> constant .)
    LBRACKET        reduce using rule 16 (postfixExpression -> constant .)
    PLUS            reduce using rule 16 (postfixExpression -> constant .)
    MINUS           reduce using rule 16 (postfixExpression -> constant .)
    LT              reduce using rule 16 (postfixExpression -> constant .)
    LEQ             reduce using rule 16 (postfixExpression -> constant .)
    GT              reduce using rule 16 (postfixExpression -> constant .)
    GEQ             reduce using rule 16 (postfixExpression -> constant .)
    EQEQ            reduce using rule 16 (postfixExpression -> constant .)
    NEQ             reduce using rule 16 (postfixExpression -> constant .)
    AND             reduce using rule 16 (postfixExpression -> constant .)
    QUESTION        reduce using rule 16 (postfixExpression -> constant .)
    OR              reduce using rule 16 (postfixExpression -> constant .)
    SEMICOLON       reduce using rule 16 (postfixExpression -> constant .)
    RPAREN          reduce using rule 16 (postfixExpression -> constant .)
    COMMA           reduce using rule 16 (postfixExpression -> constant .)
    RBRACKET        reduce using rule 16 (postfixExpression -> constant .)
    COLON           reduce using rule 16 (postfixExpression -> constant .)
    TIMES           reduce using rule 16 (postfixExpression -> constant .)
    DIV             reduce using rule 16 (postfixExpression -> constant .)


state 30

    (13) constant -> NUMBER .

    LBRACKET        reduce using rule 13 (constant -> NUMBER .)
    PLUS            reduce using rule 13 (constant -> NUMBER .)
    MINUS           reduce using rule 13 (constant -> NUMBER .)
    LT              reduce using rule 13 (constant -> NUMBER .)
    LEQ             reduce using rule 13 (constant -> NUMBER .)
    GT              reduce using rule 13 (constant -> NUMBER .)
    GEQ             reduce using rule 13 (constant -> NUMBER .)
    EQEQ            reduce using rule 13 (constant -> NUMBER .)
    NEQ             reduce using rule 13 (constant -> NUMBER .)
    AND             reduce using rule 13 (constant -> NUMBER .)
    QUESTION        reduce using rule 13 (constant -> NUMBER .)
    OR              reduce using rule 13 (constant -> NUMBER .)
    RPAREN          reduce using rule 13 (constant -> NUMBER .)
    COMMA           reduce using rule 13 (constant -> NUMBER .)
    SEMICOLON       reduce using rule 13 (constant -> NUMBER .)
    RBRACKET        reduce using rule 13 (constant -> NUMBER .)
    COLON           reduce using rule 13 (constant -> NUMBER .)
    EQ              reduce using rule 13 (constant -> NUMBER .)
    TIMES           reduce using rule 13 (constant -> NUMBER .)
    DIV             reduce using rule 13 (constant -> NUMBER .)


state 31

    (14) constant -> TRUE .

    LBRACKET        reduce using rule 14 (constant -> TRUE .)
    PLUS            reduce using rule 14 (constant -> TRUE .)
    MINUS           reduce using rule 14 (constant -> TRUE .)
    LT              reduce using rule 14 (constant -> TRUE .)
    LEQ             reduce using rule 14 (constant -> TRUE .)
    GT              reduce using rule 14 (constant -> TRUE .)
    GEQ             reduce using rule 14 (constant -> TRUE .)
    EQEQ            reduce using rule 14 (constant -> TRUE .)
    NEQ             reduce using rule 14 (constant -> TRUE .)
    AND             reduce using rule 14 (constant -> TRUE .)
    QUESTION        reduce using rule 14 (constant -> TRUE .)
    OR              reduce using rule 14 (constant -> TRUE .)
    RPAREN          reduce using rule 14 (constant -> TRUE .)
    COMMA           reduce using rule 14 (constant -> TRUE .)
    SEMICOLON       reduce using rule 14 (constant -> TRUE .)
    RBRACKET        reduce using rule 14 (constant -> TRUE .)
    COLON           reduce using rule 14 (constant -> TRUE .)
    EQ              reduce using rule 14 (constant -> TRUE .)
    TIMES           reduce using rule 14 (constant -> TRUE .)
    DIV             reduce using rule 14 (constant -> TRUE .)


state 32

    (62) statement -> selectionStatement .

    ELSE            reduce using rule 62 (statement -> selectionStatement .)
    RBRACE          reduce using rule 62 (statement -> selectionStatement .)
    error           reduce using rule 62 (statement -> selectionStatement .)
    FOR             reduce using rule 62 (statement -> selectionStatement .)
    IF              reduce using rule 62 (statement -> selectionStatement .)
    LBRACE          reduce using rule 62 (statement -> selectionStatement .)
    IDENT           reduce using rule 62 (statement -> selectionStatement .)
    LPAREN          reduce using rule 62 (statement -> selectionStatement .)
    NUMBER          reduce using rule 62 (statement -> selectionStatement .)
    TRUE            reduce using rule 62 (statement -> selectionStatement .)
    FALSE           reduce using rule 62 (statement -> selectionStatement .)


state 33

    (55) statementlist -> statementlist statement .

    RBRACE          reduce using rule 55 (statementlist -> statementlist statement .)
    error           reduce using rule 55 (statementlist -> statementlist statement .)
    FOR             reduce using rule 55 (statementlist -> statementlist statement .)
    IF              reduce using rule 55 (statementlist -> statementlist statement .)
    LBRACE          reduce using rule 55 (statementlist -> statementlist statement .)
    IDENT           reduce using rule 55 (statementlist -> statementlist statement .)
    LPAREN          reduce using rule 55 (statementlist -> statementlist statement .)
    NUMBER          reduce using rule 55 (statementlist -> statementlist statement .)
    TRUE            reduce using rule 55 (statementlist -> statementlist statement .)
    FALSE           reduce using rule 55 (statementlist -> statementlist statement .)


state 34

    (60) statement -> assignmentStatement . SEMICOLON

    SEMICOLON       shift and go to state 48


state 35

    (17) postfixExpression -> IDENT .
    (20) postfixExpression -> IDENT . LPAREN expressionlist RPAREN

    EQ              reduce using rule 17 (postfixExpression -> IDENT .)
    LBRACKET        reduce using rule 17 (postfixExpression -> IDENT .)
    PLUS            reduce using rule 17 (postfixExpression -> IDENT .)
    MINUS           reduce using rule 17 (postfixExpression -> IDENT .)
    LT              reduce using rule 17 (postfixExpression -> IDENT .)
    LEQ             reduce using rule 17 (postfixExpression -> IDENT .)
    GT              reduce using rule 17 (postfixExpression -> IDENT .)
    GEQ             reduce using rule 17 (postfixExpression -> IDENT .)
    EQEQ            reduce using rule 17 (postfixExpression -> IDENT .)
    NEQ             reduce using rule 17 (postfixExpression -> IDENT .)
    AND             reduce using rule 17 (postfixExpression -> IDENT .)
    QUESTION        reduce using rule 17 (postfixExpression -> IDENT .)
    OR              reduce using rule 17 (postfixExpression -> IDENT .)
    SEMICOLON       reduce using rule 17 (postfixExpression -> IDENT .)
    RPAREN          reduce using rule 17 (postfixExpression -> IDENT .)
    COMMA           reduce using rule 17 (postfixExpression -> IDENT .)
    RBRACKET        reduce using rule 17 (postfixExpression -> IDENT .)
    COLON           reduce using rule 17 (postfixExpression -> IDENT .)
    TIMES           reduce using rule 17 (postfixExpression -> IDENT .)
    DIV             reduce using rule 17 (postfixExpression -> IDENT .)
    LPAREN          shift and go to state 49


state 36

    (68) block -> LBRACE statementlist RBRACE .

    SEQUENTIAL      reduce using rule 68 (block -> LBRACE statementlist RBRACE .)
    RBRACE          reduce using rule 68 (block -> LBRACE statementlist RBRACE .)
    error           reduce using rule 68 (block -> LBRACE statementlist RBRACE .)
    FOR             reduce using rule 68 (block -> LBRACE statementlist RBRACE .)
    IF              reduce using rule 68 (block -> LBRACE statementlist RBRACE .)
    LBRACE          reduce using rule 68 (block -> LBRACE statementlist RBRACE .)
    IDENT           reduce using rule 68 (block -> LBRACE statementlist RBRACE .)
    LPAREN          reduce using rule 68 (block -> LBRACE statementlist RBRACE .)
    NUMBER          reduce using rule 68 (block -> LBRACE statementlist RBRACE .)
    TRUE            reduce using rule 68 (block -> LBRACE statementlist RBRACE .)
    FALSE           reduce using rule 68 (block -> LBRACE statementlist RBRACE .)
    ELSE            reduce using rule 68 (block -> LBRACE statementlist RBRACE .)
    $end            reduce using rule 68 (block -> LBRACE statementlist RBRACE .)


state 37

    (67) iterationStatement -> FOR . LPAREN assignmentStatement SEMICOLON expression SEMICOLON assignmentStatement RPAREN statement

    LPAREN          shift and go to state 50


state 38
